# PyNormaliz

./: .ci-install-normaliz.sh  .ci-install-pynormaliz.sh  .ci-run-tests.sh  .clang-format  .coveragerc  .gitignore  .install_our_PyNormaliz..sh  .install_our_PyNormaliz.sh  .mailmap  .run_our_tests.sh  .travis-install-normaliz.sh  .travis-install.sh  .travis.yml  MANIFEST.in  Makefile  NormalizModule.cpp  PyNormaliz.py  README  README.md  Readme.md  config.py.in  configure.ac  setup.cfg  setup.py
.github/workflows/: ci.yml  dist.yml  pythonpublish.yml
doc/: PyNormaliz_Tutorial.ipynb
examples/: 4x4.py  PyNormaliz_Tutorial.ipynb  first.py  first_enf.py  first_long.py  runexamples.sh  simple.py
tests/: autom.txt  equation-41.txt  generic_test.py  modify_cone.txt  modify_cone_renf.txt  must_be_matrices-39.txt  quasi_poly-36.txt  rational.txt  runtests.py  segfault-23.txt  segfault-27.txt  segfault-35.txt  segfault-45.txt  test_rational_cones.txt  vertex_denom-37.txt  volume_20.txt  volume_22.txt
